--- a/book.html
+++ b/book.html
@@ -29,15 +29,15 @@
             <figure id="pic1">
                 <img src="media/book1_sm.jpg" alt="Google Pixelbook laptop" height="200">
                 <figcaption>
-                    Google Pixel Buds fülhallgató <br>
+                    Google Pixelbook laptop <br>
                     <a href="https://balambuc.github.io/media/book1.jpg">Nagyobb méretű kép</a>
                 </figcaption>
             </figure>
             <p>Az laptop mindössze 1 kg-ot nyom és 10,3 milliméter vastag, miközben a fedele 360 fokban visszafordítható, tehát lényegében egy prémium kategóriás 2-az-1-ben.. Ennek központi eleme a fedélbe épített 12,3"-es képátlójú, 3:2 képarányú kijelző, mely 2400x1600 képpontos felbontást kínál, és természetesen érintésérzékeny. Ezt nem csak az ujjunkkal, hanem a külön megvásárolható Google <a href="https://store.google.com/us/product/google_pixelbook_pen?hl=en-US" target="_blank">Pixelbook Pen</a> aktív tollal is használhatjuk. A 99 dolláros, AAAA elemmel működő beviteli segédeszköz 60 fokban dönthető minden irányban, 2000 feletti nyomásérzékenységi fokozattal rendelkezik, késleltetése pedig mindössze 10 ezredmásodperc.</p>
             <figure id="pic2">
-                <img src="media/book2_sm.jpg" alt="Google Pixel Buds tokban" height="200">
+                <img src="media/book2_sm.jpg" alt="Google Pixelbook Pen" height="200">
                 <figcaption>
-                    Google Pixel Buds tokban <br>
+                    Google Pixelbook Pen <br>
                     <a href="https://balambuc.github.io/media/book2.jpg">Nagyobb méretű kép</a>
                 </figcaption>
             </figure>
